--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,8 +5,8 @@
       "src": "app.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb",
-        "pythonVersion": "3.9"
+        "pythonVersion": "3.9",
+        "maxLambdaSize": "15mb"
       }
     }
   ],
