--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,18 @@
+# Core dependencies
 flask==2.3.3
 flask-cors==4.0.0
+
+# Machine Learning
 scikit-learn==1.3.0
 numpy==1.24.3
 scipy==1.10.1
 joblib==1.3.2
+
+# NLP
 nltk==3.8.1
+
+# Environment
 python-dotenv==1.0.0
+
+# Serverless
+# Add any additional serverless-specific dependencies if needed
