--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/app.py",
+      "src": "api/index.py",
       "use": "@vercel/python",
       "config": {
-        "pythonVersion": "3.9"
+        "pythonVersion": "3.9",
+        "maxLambdaSize": "15mb"
       }
     },
     {
@@ -19,7 +20,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/$1"
+      "dest": "/api/$1"
     },
     {
       "src": "/(.*)",
