--- a/api/vercel.json
+++ b/api/vercel.json
@@ -15,5 +15,10 @@
       "src": "/(.*)",
       "dest": "/index.py"
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "PYTHON_VERSION": "3.9"
+    }
+  }
 }
