--- a/api/vercel.json
+++ b/api/vercel.json
@@ -19,6 +19,12 @@
   "build": {
     "env": {
       "PYTHON_VERSION": "3.9"
+    },
+    "use": "@vercel/static-build",
+    "config": {
+      "distDir": ".",
+      "zeroConfig": true
     }
-  }
+  },
+  "buildCommand": "chmod +x ./build.sh && ./build.sh"
 }
