--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,14 +2,14 @@
 flask==2.3.3
 flask-cors==4.0.0
 
-# Machine Learning
-scikit-learn==1.0.2
-numpy==1.21.6
-scipy==1.7.3
-joblib==1.1.0
+# Machine Learning - Using pre-built wheels for Python 3.12
+scikit-learn==1.3.2
+numpy==1.26.0
+scipy==1.11.3
+joblib==1.3.2
 
 # NLP
-nltk==3.7
+nltk==3.8.1
 
 # Environment
-python-dotenv==0.20.0
+python-dotenv==1.0.0
