--- a/vercel.json
+++ b/vercel.json
@@ -22,16 +22,26 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "src": "/api",
+      "dest": "/api/"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/index.html"
+      "dest": "/frontend/$1"
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.py" },
-    { "source": "/(.*)", "destination": "/frontend/index.html" }
+    { 
+      "source": "/api/(.*)", 
+      "destination": "/api/index.py" 
+    },
+    { 
+      "source": "/api", 
+      "destination": "/api/" 
+    },
+    { 
+      "source": "/(.*)", 
+      "destination": "/frontend/index.html" 
+    }
   ]
 }
